# CodeWhale

./: .cnb.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.es-419.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  README.vi.md  README.zh-CN.md  audit.toml  config.example.toml  deny.toml
.cargo/: audit.toml
.github/: AUTHOR_MAP
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/scripts/: release-workflows.test.js
.github/workflows/: cargo-deny.yml  ci.yml  security-audit.yml  web.yml
crates/agent/src/: lib.rs
crates/app-server/src/: lib.rs
crates/build-support/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: lib.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: auth_source.rs  catalog.rs  config_document.rs  external_credentials.rs  lib.rs  provider.rs  setup_state.rs  tests.rs  xai_credentials.rs
crates/config/src/catalog/: tests.rs
crates/execpolicy/src/: lib.rs
crates/hooks/src/: lib.rs
crates/mcp/src/: lib.rs
crates/secrets/src/: lib.rs
crates/state/src/: lib.rs
crates/state/tests/: parity_state.rs
crates/tui/: CHANGELOG.md  Cargo.toml  build.rs
crates/tui/locales/: en.json  es-419.json  ja.json  ko.json  pt-BR.json  vi.json  zh-Hans.json  zh-Hant.json
crates/tui/src/: automation_manager.rs  client.rs  config.rs  config_persistence.rs  config_ui.rs  context_report.rs  external_credentials.rs  hooks.rs  llm_response_cache.rs  localization.rs  (+17 more)
crates/whaleflow/: Cargo.toml
crates/whaleflow-js/: Cargo.toml
crates/whaleflow/src/: lib.rs
crates/workflow-js/: Cargo.toml
crates/workflow-js/src/: driver.rs  vm.rs
crates/workflow-js/tests/: vm_tests.rs
docs/: AGENT_WORKFLOWS_0868.md  ARCHITECTURE.md  AUTOMATIC_WORKFLOWS.md  CNB_MIRROR.md  CONFIGURATION.md  CONTRIBUTORS.md  DOGFOOD_AUTOMATIC_WORKFLOWS.md  FLEET.md  FLEET_WORKFLOW_TUTORIAL.md  GUIDE.md  HarmonyOS.md  INSTALL.md  KEYBINDINGS.md  MODES.md  PLUGIN_BUNDLES.md  PROVIDERS.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  SUBAGENTS.md  TOOL_SURFACE.md  V0_9_0_RELEASE_ACCEPTANCE.md  WHALEFLOW_AUTHORING.md  WORKFLOW_AUTHORING.md
docs/releases/: v0.9.0-release-candidate.md
integrations/weixin-bridge/: .env.example
scripts/: catalog_models_dev_test.py  ohos-env.ps1  ohos-env.sh
scripts/release/: assemble-release-assets.js  check-ohos-deps.sh  generate-release-body.sh  generate-release-body.test.sh  install-dogfood.sh  install-dogfood.test.sh  npm-wrapper-smoke.js  prepare-release.sh  prepare-release.test.sh
web/: package-lock.json  package.json
web/lib/: facts.generated.ts  public-copy.test.ts  release-credits.ts
web/scripts/: facts-lib.mjs
workflows/: stopship.workflow.js  v0868_stopship_lane.workflow.js
(+129 files in other folders)
