[package]
name = "codewhale-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Config schema and precedence model for Codewhale"

[dependencies]
anyhow.workspace = true
codewhale-execpolicy = { path = "../execpolicy", version = "0.9.1" }
codewhale-secrets = { path = "../secrets", version = "0.9.1" }
dirs.workspace = true
fd-lock = "4.0.4"
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
