[package]
name = "codewhale-whaleflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed WhaleFlow workflow IR and validation for CodeWhale"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
